--- a/.github/workflows/terraform-apply.yml
+++ b/.github/workflows/terraform-apply.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 env:
-  TF_CLOUD_ORGANIZATION: "DSB"
+  TF_CLOUD_ORGANIZATION: "DSB-BAKS"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
   TF_WORKSPACE: "azure-devsecops-pipelines"
   CONFIG_DIRECTORY: "./terraform"
